<resources>
    <string name="app_name">MVP Kotlin</string>


    <string name="signin">Sign In</string>
    <string name="signup_title">Kotlin Retrofit Demo</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="get_help_signing">Get Help for Signing</string>
    <string name="or">Or</string>
    <string name="retrofit_kotlin">Retrofit Kotlin</string>
    <string name="error_no_internet">No Internet!</string>
    <string name="error_no_internet_msg">Sorry there is no network connection.Please check your network connection.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mvp_kotlin">MVP</string>
    <string name="users">Users</string>
    <string name="activities">Activities</string>
    <string name="authors">Authers</string>
    <string name="book">Book</string>
    <string name="cover_photos">CoverPhoto</string>
    <string name="exit">Exit</string>
    <string name="user_list">User List</string>
    <string name="delete_user">Delete User</string>
    <string name="update_user">Update User</string>
    <string name="get_user">Get User</string>
    <string name="enter_userid">Enter User ID</string>
    <string name="ID">User ID</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update User</string>
</resources>
