<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const_LoginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignInActivity">

    <LinearLayout
        android:id="@+id/llayout_login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/const_LoginLayout">

        <TextView
            android:id="@+id/tvBackArrow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_weight="0.3"
            android:background="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/llayout_login1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_weight="1.7"
            android:gravity="center|center_vertical"
            android:text="@string/signin"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/marginSP_16"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llayout_login1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/child_signInlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16">

                <TextView
                    android:id="@+id/tvAppTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:gravity="center"
                    android:text="@string/signup_title"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/marginSP_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/child_signInlayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_useremail"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_8"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAppTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUserEmail"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_email"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_userpassword"
                    style="@style/TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_8"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_useremail"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btSignIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginSP_2"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_24"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_weight="1"
                    android:text="@string/signin"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold|normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_userpassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_get_help_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/get_help_signing"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btSignIn" />

                <View
                    android:id="@+id/horizontal_line_1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@+id/tv_or"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_get_help_signin" />

                <TextView
                    android:id="@+id/tv_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    app:layout_constraintBottom_toBottomOf="@+id/horizontal_line_1"
                    app:layout_constraintEnd_toStartOf="@+id/horizontal_line_2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/horizontal_line_1"
                    app:layout_constraintTop_toTopOf="@+id/horizontal_line_1" />

                <View
                    android:id="@+id/horizontal_line_2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_or"
                    app:layout_constraintTop_toBottomOf="@+id/tv_get_help_signin" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actvSignupLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_or" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>