<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/const_userDtlsLayout"
    tools:context=".ui.users.get_user.GetUserFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_UserIds"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_UserId"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_userid"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/const_userDtlsLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_UserIds">
        <TextView
            android:id="@+id/txt_Id"
            android:text="@string/ID"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_UserId"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            style="@style/TextStyle"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:background="@drawable/edittext_shape"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/const_userDtlsLayout3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_userDtlsLayout2">
        <TextView
            android:id="@+id/txt_Username"
            android:text="@string/ID"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_UserName"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            style="@style/TextStyle"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:background="@drawable/edittext_shape"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/const_userDtlsLayout4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/const_userDtlsLayout3">
        <TextView
            android:id="@+id/txt_UserPassword"
            android:text="@string/ID"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_UserPassword"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            style="@style/TextStyle"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:background="@drawable/edittext_shape"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/const_userDtlsLayout5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/const_userDtlsLayout4">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Update"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>